# bare-metal-stm32f4-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
core/: CMakeLists.txt  README.md
src/: main.c
